@@ -15,6 +15,7 @@ New features:
 - 2914484 classProviderGz's cacheLimit should be tunable at runtime
 - 2908423 Honor DeliveryRetry* props of CIM_IndicationService
 - 1664637 Reduced size class repository / classProviderSf
+- 2919072 IndicationProfile: CIM_IndicationService ModifyInstance
 
 Bugs fixed:
 
